Seller services implementationa and exceptions